# SwitchBoard

./: .custodian.yaml  .env.example  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  conftest.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.console/: guidelines.md  log.md
.custodian/: config.yaml
.fob/: .briefing
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  custodian-audit.yml  docs.yml
.hooks/: pre-push
api/: index.html
architecture/: index.html
capabilities/: index.html
config/: capabilities.yaml  policy.yaml  profiles.yaml
config/aider/: model-settings.yml
configuration/: index.html
docs/: README.md  api.md  architecture.md  capabilities.md  configuration.md  index.md  lanes.md  observability.md  phase1.md  phase2.md  phase3.md  phase4.md  phase7.md  phase8.md  phase9.md  policies.md  profiles.md  quickstart.md  request-flow.md  roadmap.md  routing.md  stability.md  troubleshooting.md
docs/migration/: switchboard-selector-cutover.md
docs/operate/: stability.md
docs/reference/: api.md  configuration.md
docs/routing/: lanes.md  policies.md  request-flow.md  routing-examples.md  routing.md
docs/system/: architecture.md
history/switchboard-selector-cutover/: index.html
lanes/: index.html
migration/switchboard-selector-cutover/: index.html
observability/: index.html
operate/observability/: index.html
operate/stability/: index.html
operate/troubleshooting/: index.html
phase1/: index.html
phase2/: index.html
phase3/: index.html
phase4/: index.html
phase7/: index.html
phase8/: index.html
phase9/: index.html
policies/: index.html
profiles/: index.html
quickstart/: index.html
reference/api/: index.html
reference/configuration/: index.html
request-flow/: index.html
roadmap/: index.html
routing/: index.html
routing-examples/: index.html
routing/lanes/: index.html
routing/policies/: index.html
routing/request-flow/: index.html
routing/routing/: index.html
routing/routing-examples/: index.html
scripts/: aider.sh  aider_smoke.sh  bootstrap_aider.sh  check_docs.sh  inspect.py  run_dev.ps1  run_dev.sh  smoke_test.ps1  smoke_test.sh
search/: search_index.json
src/switchboard/: __init__.py  app.py  config.py
src/switchboard/adapters/: cxrp_mapper.py  ecp_mapper.py  file_capability_store.py  file_policy_store.py  file_profile_store.py  http_9router.py  jsonl_decision_sink.py  retrying_gateway.py
src/switchboard/api/: errors.py  routes_admin.py  routes_chat.py  routes_health.py  routes_models.py  routes_routing.py
stability/: index.html
system/architecture/: index.html
system/roadmap/: index.html
test/: __init__.py
test/contract/: test_9router_gateway.py
test/integration/: test_adaptive_policy.py  test_admin_observability.py  test_aider_compat.py  test_canonical_routing_records.py  test_chat_proxy.py  test_decision_log_write.py  test_phase3_routing.py  test_phase8_routing.py  test_phase9_hardening.py  test_streaming.py
test/smoke/: test_health.py  test_models.py
test/unit/: test_adaptive_background_refresh.py  test_adjustment_engine.py  test_adjustment_store.py  test_aider_local_routing.py  test_capability_registry.py  test_classifier.py  test_classifier_phase8.py  test_config_validator.py  test_cxrp_emission.py  test_decision_logger.py  test_experiment_router.py  test_lane_engine.py  test_lane_engine_demote.py  test_lane_escalation.py  test_lane_fallback.py  test_lane_planner.py  test_lane_policy.py  test_lane_policy_phase9.py  test_lane_routing_matrix.py  test_lane_routing_models.py  test_legacy_selector_removal.py  test_policy_engine.py  test_policy_loading.py  test_profile_registry.py  test_profile_scorer.py  test_retrying_gateway.py  test_selector.py  test_selector_runtime.py  test_signal_aggregator.py  test_summary.py
troubleshooting/: index.html
(+51 files in other folders)
